# go-xdr

./: .bazelrc  MODULE.bazel
patches/rules_antlr/: antlr_debug.diff
pkg/compiler/parser/: BUILD.bazel
